javaDSL/src/test/resources/typeSystemTestModels/valid/constructors/ConstructorMustNamedAsClass.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.constructors;

public class ConstructorMustNamedAsClass {

  public ConstructorMustNamedAsClass(){

  }
}
