javaDSL/src/test/resources/typeSystemTestModels/invalid/methods/AbstractMethodDefinition.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.methods;

public class AbstractMethodDefinition {

  public abstract String getString();

}
